--- a/index.html
+++ b/index.html
@@ -1,39 +1,114 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Tunes — Illumina Audio</title>
-<meta name="description" content="Tunes — playlists and mixes for the Illumina cycles.">
-<style>
-  :root{--bg:#0B0F19;--ink:#E6EAF2;--accent:#A4E8FF;--muted:#94A3B8}
-  *{box-sizing:border-box}
-  body{margin:0;background:var(--bg);color:var(--ink);font:16px/1.6 ui-sans-serif,system-ui}
-  .wrap{max-width:760px;margin:0 auto;padding:24px;text-align:center}
-  a{color:var(--accent);text-decoration:none} a:hover{text-decoration:underline}
-  .pill{display:inline-block;margin-top:8px;padding:.25rem .6rem;border:1px solid rgba(255,255,255,.15);border-radius:999px;color:var(--muted);font-size:13px}
-  footer{margin-top:2rem;color:var(--muted);font-size:.9rem}
-</style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Tunes — Illumina Player</title>
+  <meta name="description" content="Tunes: playlists and tone practice with School study deep-links." />
+  <meta name="theme-color" content="#0b0d11">
+  <style>
+    :root{
+      --bg:#0b0d11; --card:#101422; --ring:#1b2030; --ink:#e8e8ea; --muted:#a9a9b6; --pill:#0f1322; --hi:#ffd56e;
+    }
+    *{box-sizing:border-box}
+    html,body{height:100%}
+    body{margin:0; background:radial-gradient(1200px 1200px at 80% -10%, #111726 0%, var(--bg) 50%, #07090d 100%); color:var(--ink); font:16px/1.5 system-ui,-apple-system,Segoe UI,Roboto,Inter,Arial}
+    header{display:flex; align-items:center; justify-content:space-between; gap:12px; padding:14px 16px; border-bottom:1px solid var(--ring)}
+    .brand{font-weight:700; letter-spacing:.2px}
+    nav{display:flex; gap:10px; flex-wrap:wrap}
+    .navlink{display:inline-block; padding:6px 10px; border:1px solid var(--ring); border-radius:999px; text-decoration:none; color:var(--ink); background:linear-gradient(180deg,#101426 0%,#0d111b 100%); font-size:12px}
+
+    .wrap{max-width:1100px; margin:0 auto; padding:16px}
+    .filters{display:flex; flex-wrap:wrap; gap:8px; margin-bottom:12px}
+    .pill{display:inline-block; padding:6px 10px; border:1px solid var(--ring); border-radius:999px; text-decoration:none; color:var(--ink); background:linear-gradient(180deg,#101426 0%,#0d111b 100%); font-size:12px}
+    .pill:hover{border-color:#2a3146}
+    .grid{display:grid; grid-template-columns:1fr; gap:10px}
+    .card{background:linear-gradient(180deg, #0f1220 0%, var(--card) 100%); border:1px solid var(--ring); border-radius:14px; padding:14px}
+    .row{display:grid; grid-template-columns: 1fr auto auto auto; gap:10px; align-items:center}
+    @media (max-width:760px){ .row{grid-template-columns:1fr auto; row-gap:4px} .hz,.fac{justify-self:start} }
+    .title{font-weight:600}
+    .muted{color:var(--muted); font-size:12px}
+    .hz{font-variant-numeric:tabular-nums; color:var(--muted); font-size:12px; padding:2px 8px; border:1px solid var(--ring); border-radius:999px}
+    .fac{font-size:12px; color:var(--muted)}
+    .study{display:inline-block; padding:6px 10px; border:1px solid var(--ring); border-radius:999px; text-decoration:none; color:var(--ink); background:linear-gradient(180deg,#101426 0%,#0d111b 100%); font-size:12px}
+  </style>
 </head>
 <body>
-<div class="wrap">
-  <h1>🎧 Tunes</h1>
-  <div class="pill" id="seedChip">Seed: —</div>
-  <p>Illumina’s sound tower — mixes that hum across the 42-day rhythm.</p>
-  <p><a href="/mixes/">Browse mixes</a> · <a href="/about/">About</a></p>
-  <footer>Connected · <a href="https://jar.plnt.earth/">Jar</a> · <a href="https://froot.plnt.earth/">Froot</a></footer>
-</div>
-<script>
-(function(){
-  var map={apple:"#FAD02C",pumpkin:"#FF8A3D",cumin:"#D0A15F",cinnamon:"#D66A4E",clove:"#B55B3A",fennel:"#7DE2A7",cardamom:"#C7B3FF"};
-  function getParam(k){var u=new URL(location.href);return (u.searchParams.get(k)||"").toLowerCase();}
-  var p=getParam("seed");
-  var key=p && map[p]? p : (localStorage.getItem("tunes_seed")||"").toLowerCase();
-  if(!map[key]) key="apple";
-  localStorage.setItem("tunes_seed",key);
-  document.documentElement.style.setProperty("--accent", map[key]);
-  var chip=document.getElementById("seedChip"); if(chip){ chip.textContent="Seed: "+key.charAt(0).toUpperCase()+key.slice(1); }
-})();
-</script>
+  <header>
+    <div class="brand">Tunes · Illumina</div>
+    <nav>
+      <a class="navlink" href="/index.html">Jar</a>
+      <a class="navlink" href="/school.html">School</a>
+      <a class="navlink" href="/tunes.html">Tunes</a>
+    </nav>
+  </header>
+
+  <main class="wrap">
+    <section class="card">
+      <h2 style="margin:0 0 8px; font-size:15px; letter-spacing:.2px">Albums → School</h2>
+      <div class="filters">
+        <a class="pill" href="/school.html?mode=fj&focus=1">Family Jewels → School</a>
+        <a class="pill" href="/school.html?mode=froot&focus=1">FROOT → School</a>
+        <a class="pill" href="/school.html?mode=eh&focus=1">Electra Heart → School</a>
+        <a class="pill" href="/school.html?mode=laf&focus=1">LOVE + FEAR → School</a>
+        <a class="pill" href="/school.html?mode=adiml&focus=1">Ancient Dreams → School</a>
+      </div>
+      <p class="muted">Jump directly into case studies on the School spiral.</p>
+    </section>
+
+    <section class="card" style="margin-top:12px">
+      <h2 style="margin:0 0 8px; font-size:15px; letter-spacing:.2px">Today’s Tone Queue</h2>
+      <div class="grid" id="tracks">
+        <!-- Rows get injected -->
+      </div>
+    </section>
+  </main>
+
+  <script>
+    (function(){
+      // Minimal demo dataset; align band+album for deep-links
+      var tracks = [
+        { title:"Mirror Scan", artist:"Illumina", album:"froot", band:"mirror", hz:"128 Hz" },
+        { title:"Honey Breath", artist:"Illumina", album:"eh",    band:"honey",  hz:"144 Hz" },
+        { title:"Frequency Walk", artist:"Illumina", album:"froot", band:"frequency", hz:"180 Hz" },
+        { title:"Solar Flare", artist:"Illumina", album:"adiml", band:"solar", hz:"256 Hz" },
+        { title:"Celestial Lift", artist:"Illumina", album:"laf", band:"celestial", hz:"512 Hz" },
+        { title:"Trickster Flip", artist:"Illumina", album:"fj", band:"trickster", hz:"var." }
+      ];
+
+      var host = document.getElementById("tracks");
+      for(var i=0;i<tracks.length;i++){
+        var t = tracks[i];
+        var row = document.createElement("div");
+        row.className = "row track";
+        row.setAttribute("data-band", t.band);
+        row.setAttribute("data-album", t.album);
+
+        var title = document.createElement("div");
+        title.className = "title";
+        title.textContent = t.title + " — " + t.artist;
+
+        var fac = document.createElement("div");
+        fac.className = "fac";
+        fac.textContent = "Faculty: " + t.band;
+
+        var hz = document.createElement("div");
+        hz.className = "hz";
+        hz.textContent = t.hz;
+
+        var study = document.createElement("a");
+        study.className = "study";
+        study.setAttribute("aria-label","Study this track’s faculty in School");
+        study.href = "/school.html?mode=" + t.album + "&band=" + t.band + "&focus=1";
+        study.textContent = "Study";
+
+        row.appendChild(title);
+        row.appendChild(hz);
+        row.appendChild(fac);
+        row.appendChild(study);
+        host.appendChild(row);
+      }
+    })();
+  </script>
 </body>
 </html>
